# cellang

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml
crates/cellang/: Cargo.toml  README.md
crates/cellang-cli/: Cargo.toml  README.md
crates/cellang-cli/examples/: env.json
crates/cellang-cli/src/: main.rs
crates/cellang-lsp/: Cargo.toml
crates/cellang-lsp/src/: adapter.rs  capabilities.rs  diagnostics.rs  diagnostics_lifecycle.rs  embedded.rs  formatter.rs  handlers.rs  hover_protocol.rs  lib.rs  position.rs  server.rs  state.rs  symbols.rs  wasm.rs
crates/cellang-lsp/tests/: formatting_protocol.rs  mod.rs  protocol_fixtures.rs  wasm_adapter_contract.rs
crates/cellang-macros/: Cargo.toml
crates/cellang-macros/src/: lib.rs
crates/cellang/examples/: comprehensions.rs  concurrency.rs  create_function.rs  env_snapshot.rs  getting_started.rs  policy_rules.rs  simple.rs  tree_inspection.rs  typed_environment.rs  user_role.rs  user_role_derive.rs
crates/cellang/src/: ast.rs  builtins.rs  derive.rs  env.rs  error.rs  functions.rs  interpreter.rs  lexer.rs  lib.rs  macros.rs  parser.rs  runtime.rs  types.rs  value.rs  wasm.rs
crates/cellang/src/hir/: expr.rs  lower.rs  mod.rs
crates/cellang/src/syntax/: ast.rs  bridge.rs  error.rs  inspection.rs  kind.rs  language.rs  mod.rs  parity_tests.rs  parse.rs  parser.rs
crates/cellang/src/types/: dynamic.rs  list.rs  map.rs  mod.rs  ser.rs
crates/cellang/tests/: derive.rs  parser_facade_parity.rs
crates/cli/: Cargo.toml
crates/cli/examples/: example.cel  is_admin.cel
crates/cli/src/: main.rs
crates/lib/: Cargo.toml  README.md
crates/lib/examples/: create_function.rs  simple.rs  user_role.rs
crates/lib/src/: environment.rs  functions.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  types.rs
crates/lib/src/types/: de.rs  duration.rs  dynamic.rs  list.rs  map.rs  mod.rs  ser.rs  value.rs
src/: builtins.rs  environment.rs  functions.rs  interpreter.rs  lexer.rs  lib.rs  macros.rs  parser.rs  types.rs
