[workspace]

resolver = "2"

members = [
    "crates/cellang",
    "crates/cellang-cli",
    "crates/cellang-lsp",
    "crates/cellang-macros",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["Nikola Jokic <jokicnikola07@gmail.com>"]

[workspace.dependencies]
rowan = "0.16.1"
serde = "1.0.228"
serde_json = "^1.0.150"
wasm-bindgen = "0.2.126"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
