[package]
name = "cellang-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language Server Protocol engine for Cellang"
repository = "https://github.com/nikola-jokic/cellang"

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
cellang = { path = "../cellang" }
lsp-types = "^0.97.0"
rowan = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "^1", default-features = false, features = [
    "sync",
    "time",
] }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
