[package]
name = "cellang-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for the cellang crate"
repository = "https://github.com/nikola-jokic/cellang"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", features = ["full"] }
