[package]
name = "cellang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <jokicnikola07@gmail.com>"]
description = "Interpreter for the CEL expression language"
repository = "https://github.com/nikola-jokic/cellang"
readme = "README.md"
keywords = ["cel", "expression", "language", "interpreter", "rust"]
categories = ["development-tools", "compilers"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
derive = ["cellang-macros"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
cellang-macros = { path = "../cellang-macros", optional = true }
serde = { version = "^1", features = ["derive", "rc"] }
miette = { version = "^7" }
regex = "^1"
time = { version = "^0.3", features = ["serde", "formatting", "parsing"] }
base64 = "^0.22"
thiserror = "^2"
serde_json = "^1"
wasm-bindgen = { version = "^0.2.95", optional = true, features = ["spans"] }
serde-wasm-bindgen = { version = "^0.6", optional = true }

[dev-dependencies]
miette = { version = "^7", features = ["fancy"] }
time = { version = "^0.3", features = [
    "serde",
    "formatting",
    "parsing",
    "macros",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"
