[package]
name = "cellang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <jokicnikola07@gmail.com>"]
description = "Interpreter CLI for the CEL expression language"
repository = "https://github.com/nikola-jokic/cellang"
readme = "README.md"
keywords = ["cli", "cel", "expression", "language", "interpreter", "rust"]
categories = ["cli", "programming-language"]

[dependencies]
clap = { version = "^4", features = ["derive"] }
miette = { version="^7", features = ["fancy"] }
cellang = { path = "../lib" }
serde_json = "^1"
serde = { version = "^1" }
